couple of spacing fixes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -62,3 +62,9 @@
   margin-top: -200px;  /* -1 * image height / 2 */
   display: block;
 }
+
+body {
+  padding-top: 70px; /* Whatever the height of your navbar is; the
+                             default is 50px */
+  margin-bottom: 30px;
+}
